<resources>
    <string name="app_name">POSNet</string>
    <string name="title_activity_home">Home</string>
    <item name="visible" type="id"/>
    <item name="masked" type="id"/>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="thongke">Thống kê</string>
    <string name="thongbao">Thông báo</string>
    <string name="duongdan">Hướng dẫn sử dụng</string>
    <string name="trogiup">Trợ giúp</string>
    <string name="infoapp">Thông tin ứng dụng</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="title_activity_re_order">ReOrderActivity</string>
    <string name="title_Info">Thông tin Order</string>
    <string name="title_DSSP">Danh sách SP</string>
    <string name="xacnhanSP">Xác nhận SP</string>
    <string name="thanhtoan">Thanh toán</string>
    <string name="nextbutton">Tiếp tục</string>
    <string name="scan">Scan</string>
    <string name="success">Hoàn thành</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="forget_password">Quên mật khẩu?</string>
    <string name="remember_acc">Ghi nhớ tài khoản</string>
    <string name="copyright">Copyright © 2017</string>
    <string name="version">DMCL v.001</string>
    <string name="title_Login">Đăng nhập</string>
    <string name="tim_kiem">Tìm kiếm</string>
    <string name="qrcode">QRCode</string>
    <string name="txtvTamTinh">Tạm tính</string>
    <string name="txtvGiam">Giảm</string>
    <string name="txtvTongGia">Tổng giá</string>
    <string name="check_product">Check product</string>
    <string name="new_order">New order</string>
    <string name="reorder">ReOrder</string>
    <string name="ten_kh">Tên KH:</string>
    <string name="thanh_cong">Thành Công</string>
    <string name="trang_thai">Trạng thái:</string>
    <string name="reorderid">Mã ReOrderID:</string>
    <string name="hinh_thuc_thanh_toan">Hình thức thanh toán:</string>
    <string name="tong_tien">Tổng Tiền:</string>
    <string name="tra_het">Trả hết</string>
    <string name="tra_gop">Trả góp</string>
    <string name="tra_truoc">Trả trước:</string>
    <string name="tien_tra_truoc">Số tiền trả trước</string>
    <string name="xac_nhan">Xác nhận</string>
    <string name="vat">Đã bao gồm VAT</string>
    <string name="xac_nhan_thanh_toan">Xác nhận thanh toán</string>
    <string name="tenKH">Tên khách hàng</string>
    <string name="dia_chi">Địa chỉ</string>
    <string name="so_dien_thoai">Số điện thoại</string>
    <string name="thong_tin_khach_hang"><![CDATA[> Thông Tin Khách Hàng]]></string>
    <string name="thoi_gian">Thời gian:</string>
    <string name="ngay_giao">Ngày giao:</string>
    <string name="chon_ngay">Chọn ngày</string>
    <string name="chon_thoi_gian">Chọn thời gian</string>
    <string name="quay">Quầy:</string>
    <string name="giao_hang_tai">Giao hàng tại:</string>
    <string name="lay_hang">Lấy hàng:</string>
    <string name="check">Check</string>
    <string name="giao_hang">Giao hàng:</string>
    <string name="mChonGiamGia">Chọn</string>
    <string name="thong_tin_giao_hang"><![CDATA[> Thông Tin Giao Hàng]]></string>
    <string name="nha">Nhà</string>
    <string name="khuyen_mai"><![CDATA[> Khuyến mãi]]></string>
    <string name="thong_tin_san_pham"><![CDATA[> Thông tin sản phẩm]]></string>
    <string name="quay_lai">Quay lại</string>
    <string name="tiep_tuc">Tiếp tục</string>
    <string name="khong_co_luu_y">Không có lưu ý</string>
    <string name="san_pham_tang_kem">Sản phẩm tặng kèm</string>
    <string name="image_sp">image sản phẩm</string>
    <string name="username">Tên đăng nhập</string>
</resources>
