<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ThongKe"
            android:icon="@drawable/ic_timeline_white_24dp"
            android:title="@string/thongke" />
        <item
            android:id="@+id/nav_ThongBao"
            android:icon="@drawable/ic_notifications_none_white_24dp"
            android:title="@string/thongbao" />
    </group>

    <item android:title="@string/trogiup">
        <menu>
            <item
                android:id="@+id/nav_Help"
                android:icon="@drawable/ic_help_white_24dp"
                android:title="@string/duongdan" />
            <item
                android:id="@+id/nav_Info"
                android:icon="@drawable/ic_info_white_24dp"
                android:title="@string/infoapp" />
            <item
                android:id="@+id/nav_Logout"
                android:icon="@drawable/ic_exit_to_app_white_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
